scenarios/scenario-2-kong-example/gateway-01-namespace/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kong
  namespace: kong-common-gateway
spec:
  gatewayClassName: kong
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values: [application-01, application-02]
